--- a/exdeploy/src/app/panel/panel.component.html
+++ b/exdeploy/src/app/panel/panel.component.html
@@ -1,3 +1,9 @@
-<p>
-  panel works!
-</p>
+<div>
+  {{name}}
+  <ul>
+    <li *ngFor="let field of fields">
+      <app-field [field]="field"></app-field>
+    </li>
+  </ul>
+  
+</div>
